# agent-transport-load-test

./: .gitignore  ARCHITECTURE.md  BENCHMARK.md  BENCHMARK_SUMMARY.md  Dockerfile.agent-transport  Dockerfile.agent-transport-livekit  Dockerfile.direct  Dockerfile.livekit-gateway-agent  Dockerfile.livekit-python-agent  Dockerfile.mock-services  EC2_RUN_INSTRUCTIONS.md  PROCESS_MODE_FINDINGS.md  RUN_ON_EC2.md  RUN_ON_EC2_THREAD.md  docker-compose.horizontal.yml  docker-compose.livekit-horizontal.yml  docker-compose.lkp-vs-lkg.yml  docker-compose.novad-1cpu.yml  docker-compose.novad.yml  docker-compose.vad-1cpu.yml  docker-compose.yml  pyproject.toml  run_c15_lkg_profile.sh  run_per_vcpu_sweep.sh  run_revalidate.sh
docker/: livekit.yaml
load_test/: __main__.py  cli.py  profiles.py  report.py  runner.py
results-revalidate/: REPORT.md  at_livekit_c140_run1.json  at_livekit_c140_run2.json  at_livekit_c140_run4.json  at_livekit_c140_run5.json  at_pipecat_c110_run1.json  at_pipecat_c110_run2.json  at_pipecat_c110_run3.json  at_pipecat_c110_run4.json  at_pipecat_c110_run5.json  direct_c50_run1.json  direct_c50_run2.json  direct_c50_run3.json  (+3 more)
results-revalidate-host-loaded/: REPORT.md  at_livekit_c140_memprobe.json  at_livekit_c140_run1.json  at_livekit_c140_run2.json  at_livekit_c140_run4.json  at_livekit_c140_run5.json  at_pipecat_c110_run1.json  at_pipecat_c110_run2.json  at_pipecat_c110_run3.json  at_pipecat_c110_run4.json  at_pipecat_c110_run5.json  direct_c50_run1.json  direct_c50_run2.json  direct_c50_run3.json  direct_c50_run4.json  direct_c50_run5.json  summary.json
(+20 files in other folders)
